# MapCreator

./: .gitignore  .pre-commit-config.yaml  .travis.yml  CMakeLists.txt  README.md
include/: CMakeLists.txt
include/BasicViewer/: BaseViewer.h  BasicViewer.h  Camera.h  CloudViewer.h  CorrespondingPointsGL.h  EvaluationViewer.h  FrameViewer.h  GridGL.h  KeyFrameGL.h  LineSegmentGL.h  PointCloudGL.h  PointPairGL.h  PrimitiveGL.h  TrajectoryGL.h
include/Core/: Algorithm.h  ArucoMarkerUtils.h  BundleAdjustment.h  Calibrator.h  Camera.h  ComputationResultCache.h  CoordinateConverter.h  Feature.h  Frame.h  Grabber.h  Image.h  Inliers.h  KeyFrame.h  Logger.h  Matcher.h  MyMath.h  Optimization.h  PointCloud.h  Pose.h  SLAM.h  Serialize.h  SlamComputationCache.h  SlamParameters.h  Test.h  Tracker.h  Transformation.h  Types.h  Utility.h
include/Engine/: ComputationConfigureDialog.h  CoordinateConverterDialog.h  FixedFrameCount_FrameTrackingMethodDialog.h  InliersViewerOptionDialog.h  LogPanelDialog.h  MainWindow.h  MarkerSelectorDialog.h  MarkerViewerDialog.h  OneByOne_FrameTrackingMethodDialog.h  PcaKeyFrame_FrameTrackingMethodDialog.h  SlamComputationDialog.h  UiDialogs.h
include/Handler/: ImageDataHandler.h  TreeHandler.h
include/MapCreator/: ComputationConfigureDialog.h  CoordinateConverterDialog.h  FixedFrameCount_FrameTrackingMethodDialog.h  InliersViewerOptionDialog.h  LogPanelDialog.h  MainWindow.h  MarkerSelectorDialog.h  MarkerViewerDialog.h  OneByOne_FrameTrackingMethodDialog.h  PcaKeyFrame_FrameTrackingMethodDialog.h  SlamComputationDialog.h  UiDialogs.h
include/SLAM/: Algorithm.h  Alignment.h  ArucoMarkerUtils.h  BundleAdjustment.h  Calibrator.h  CommonDefinitions.h  ComputationResultCache.h  CoordinateConverter.h  GlobalOptimization.h  Inliers.h  KeyFrame.h  Matcher.h  Option.h  SLAM.h  SlamComputationCache.h  SlamParameters.h  Tracker.h  Transformation.h
source/: CMakeLists.txt
source/include/BasicViewer/: BaseViewer.h  BasicViewer.h  Camera.h  CloudViewer.h  CorrespondenceViewer.h  CorrespondingPointsGL.h  FrameViewer.h  KeyFrameGL.h  LineSegmentGL.h  PointPairGL.h  PrimitiveGL.h  TrajectoryGL.h
source/include/Core/: Image.h  MyMath.h  PointCloud.h  Serialize.h  Utility.h
source/include/Handler/: ImageDataHandler.h
source/include/MapCreator/: AggregateCorrespondenceViewer.h  CloudPlayControlDialog.h  ComputationConfigureDialog.h  ControlPanelDialog.h  CoordinateConverterDialog.h  FixedFrameCount_FrameTrackingMethodDialog.h  InliersViewerOptionDialog.h  LogPanelDialog.h  MainWindow.h  MarkerViewerDialog.h  OneByOne_FrameTrackingMethodDialog.h  PcaKeyFrame_FrameTrackingMethodDialog.h  SlamComputationDialog.h
source/include/SLAM/: Alignment.h  ArucoMarkerUtils.h  CommonDefinitions.h  ComputationResultCache.h  CoordinateConverter.h  FixedIntervalTracker.h  GlobalOptimization.h  KeyFrame.h  OneByOneTracker.h  Option.h  PcaKeyFrameTracker.h  SlamComputationCache.h  SlamTrackers.h  Tracker.h  Transformation.h
source/lib/: CMakeLists.txt
source/lib/BasicViewer/: BaseViewer.cpp  BasicViewer.cpp  CMakeLists.txt  Camera.cpp  CloudViewer.cpp  CorrespondenceViewer.cpp  CorrespondingPointsGL.cpp  EvaluationViewer.cpp  FrameViewer.cpp  KeyFrameGL.cpp  LineSegmentGL.cpp  PointPairGL.cpp  PrimitiveGL.cpp  TrajectoryGL.cpp
source/lib/Core/: Feature.cpp  Grabber.cpp  Image.cpp  MyMath.cpp  PointCloud.cpp  Test.cpp  Utility.cpp
source/lib/Handler/: CMakeLists.txt  ImageDataHandler.cpp  TreeHandler.cpp
source/lib/MapCreator/: AggregateCorrespondenceViewer.cpp  CMakeLists.txt  MainWindow.cpp  (+8 more)
source/tool/: CMakeLists.txt  FrameViewer.cpp  MapCreator.cpp
src/: CMakeLists.txt
src/Applications/: BaseViewer.cpp  BasicViewer.cpp  CMakeLists.txt  CloudViewer.cpp  ComputationConfigureDialog.cpp  CoordinateConverterDialog.cpp  FixedFrameCount_FrameTrackingMethodDialog.cpp  GridGL.cpp  InliersViewerOptionDialog.cpp  KeyFrameGL.cpp  LogPanelDialog.cpp  MainWindow.cpp  OneByOne_FrameTrackingMethodDialog.cpp  PcaKeyFrame_FrameTrackingMethodDialog.cpp  PointPairGL.cpp  PrimitiveGL.cpp  TrajectoryGL.cpp
src/BasicViewer/: BaseViewer.cpp  BasicViewer.cpp  CMakeLists.txt  Camera.cpp  CorrespondingPointsGL.cpp  EvaluationViewer.cpp  FrameViewer.cpp  GridGL.cpp  KeyFrameGL.cpp  LineSegmentGL.cpp  PointCloudGL.cpp  PointPairGL.cpp  TrajectoryGL.cpp
src/Core/: Algorithm.cpp  ArucoMarkerUtils.cpp  BundleAdjustment.cpp  CMakeLists.txt  Calibrator.cpp  ComputationResultCache.cpp  CoordinateConverter.cpp  DataAssociation.cpp  Feature.cpp  Grabber.cpp  Image.cpp  Inliers.cpp  KeyFrame.cpp  MyMath.cpp  Optimization.cpp  PointCloud.cpp  SlamParameters.cpp  Tracker.cpp  Transformation.cpp  Utility.cpp
src/Engine/: CMakeLists.txt  ComputationConfigureDialog.cpp  CoordinateConverterDialog.cpp  FixedFrameCount_FrameTrackingMethodDialog.cpp  InliersViewerOptionDialog.cpp  LogPanelDialog.cpp  MainWindow.cpp  MarkerSelectorDialog.cpp  MarkerViewerDialog.cpp  OneByOne_FrameTrackingMethodDialog.cpp  PcaKeyFrame_FrameTrackingMethodDialog.cpp  SlamComputationDialog.cpp
src/Handler/: CMakeLists.txt  ImageDataHandler.cpp
src/MapCreator/: CMakeLists.txt  ComputationConfigureDialog.cpp  CoordinateConverterDialog.cpp  FixedFrameCount_FrameTrackingMethodDialog.cpp  InliersViewerOptionDialog.cpp  MainWindow.cpp  MarkerSelectorDialog.cpp  MarkerViewerDialog.cpp  OneByOne_FrameTrackingMethodDialog.cpp  PcaKeyFrame_FrameTrackingMethodDialog.cpp  SlamComputationDialog.cpp
src/Mapping/: CMakeLists.txt
src/SLAM/: Algorithm.cpp  Alignment.cpp  ArucoMarkerUtils.cpp  CMakeLists.txt  Calibrator.cpp  CoordinateConverter.cpp  GlobalOptimization.cpp  Inliers.cpp  Matcher.cpp  Option.cpp  SlamParameters.cpp  Tracker.cpp  Transformation.cpp
src/Streamer/: CMakeLists.txt  ImageDataHandler.cpp
src/Tools/: CMakeLists.txt
src/tool/: CMakeLists.txt  FrameViewer.cpp  MapCreator.cpp  Viewer.cpp  dataset_converter.cpp
tests/: CMakeLists.txt
tests/core/: test_coordinate_converter.cpp  test_keyframe.cpp  test_mymath.cpp  test_optimization.cpp  test_transformation.cpp
tests/handler/: test_image_handler.cpp
(+62 files in other folders)
