install ( DIRECTORY Core
	DESTINATION "${CMAKE_INSTALL_PREFIX}/include"
	FILES_MATCHING PATTERN "*.h" )


install ( DIRECTORY SLAM
	DESTINATION "${CMAKE_INSTALL_PREFIX}/include"
	FILES_MATCHING PATTERN "*.h" )


install ( DIRECTORY Handler
	DESTINATION "${CMAKE_INSTALL_PREFIX}/include"
	FILES_MATCHING PATTERN "*.h" )


install ( DIRECTORY BasicViewer
	DESTINATION "${CMAKE_INSTALL_PREFIX}/include"
	FILES_MATCHING PATTERN "*.h" )


install ( DIRECTORY MapCreator
	DESTINATION "${CMAKE_INSTALL_PREFIX}/include"
	FILES_MATCHING PATTERN "*.h" )